# CogniChat

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  app.py  docker-compose.yml  docker-setup.ps1  ejemplo_configuracion_hibrida.py  env.txt  pyproject.toml  requirements.txt  test_hybrid_concept_extraction.py
.vercel/: project.json
config/: __init__.py  settings.py
data/cache/: .gitkeep
docs/: ANALISIS_CUALITATIVO_ARQUITECTURA.md  ANALISIS_CUALITATIVO_GUIA_RAPIDA.md  ANALISIS_CUALITATIVO_PROMPT_CREACION.md  ARQUITECTURA_DETALLADA.md  ARQUITECTURA_TECNICA_ANALISIS_CUALITATIVO.md  CACHE_DETECTION_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_ANALISIS_CUALITATIVO.md  DESARROLLO_PROTOTIPO_DETALLADO.md  DESPLIEGUE_DOCKER.md  DOCUMENTACION_PRUEBAS_AUTOMATIZADAS.md  DOCUMENTACION_PRUEBAS_UNITARIAS.md  DOCUMENTACION_PRUEBAS_UNITARIAS_COMPLETA.md  DOCUMENTACION_TESIS.md  DOCUMENTACION_TESIS_SCRUM.md  Desarrollo de prototipo.txt  Diseño de arquitectura.txt  GUIA_DESARROLLADOR_ANALISIS_CUALITATIVO.md  GUIA_USUARIO_ANALISIS_CUALITATIVO.md  INSTALACION_CONDA.md  MODULO_ANALISIS_CUALITATIVO_COMPLETO.md  MODULO_ANALISIS_CUALITATIVO_V2_DISEÑO.md  OPTIMIZACIONES_RAG.md  PRIMER_SUBMODULO_RESUMEN.md  PRODUCCION_LISTA.md  README_DOCUMENTACION.md  REQUERIMIENTOS.md  SOLUCION_DEPENDENCIAS.md  TROUBLESHOOTING_DOCKER.md  __init__.py
modules/: __init__.py  alerts.py  chatbot.py  document_processor.py  document_upload.py  qualitative_analysis.py  settings.py
modules/qualitative_analysis/: README.md  __init__.py
modules/qualitative_analysis/core/: __init__.py  analyzer.py  citation_manager.py  config.py  rag_cache_manager.py
modules/qualitative_analysis/extractors/: __init__.py  coding_assistant.py  concept_extractor.py  relation_extractor.py  sentiment_extractor.py  topic_extractor.py
modules/qualitative_analysis/ui/: __init__.py  main_render.py
modules/qualitative_analysis/ui/components/: __init__.py  cache_management.py  educational.py
modules/qualitative_analysis/ui/tabs/: __init__.py  coding_tab.py  concepts_tab.py  relations_tab.py  sentiment_tab.py  topics_tab.py
scripts/: __init__.py  check_dependencies.py  download-models.ps1  install_requirements.py  production_check.py
tests/: __init__.py  test_alerts.py  test_chatbot.py  test_document_processor.py  test_document_upload.py  test_qualitative_analysis.py  test_runner.py  test_settings.py  test_utils.py  test_validators.py
unit_tests/: README.md  __init__.py  conftest.py  run_unit_tests.py  test_app_unit.py
unit_tests/config/: __init__.py  test_settings_unit.py
unit_tests/fixtures/: __init__.py  test_data.py
unit_tests/modules/: __init__.py  test_alerts_unit.py  test_chatbot_unit.py  test_document_processor_unit.py  test_document_upload_unit.py  test_qualitative_analysis_unit.py  test_settings_unit.py
unit_tests/scripts/: __init__.py  test_check_dependencies_unit.py  test_install_requirements_unit.py
unit_tests/utils/: __init__.py  test_chat_history_unit.py  test_database_unit.py  test_error_handler_unit.py  test_logger_unit.py  test_metrics_unit.py  test_ollama_client_unit.py  test_rag_processor_unit.py  test_traceability_unit.py  test_validators_unit.py
utils/: __init__.py  chat_history.py  database.py  error_handler.py  logger.py  metrics.py  ollama_client.py  rag_processor.py  traceability.py  validators.py
